--- a/.coveragerc
+++ b/.coveragerc
@@ -1,3 +1,3 @@
 [run]
 source = src/
-omit = src/**/__init__.py,src/tests/**,src/ui.py,src/core.py
+omit = src/**/__init__.py,src/tests/**,src/ui/**,src/core.py
