--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "ot_harjoitustyo"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+bcrypt = "^4.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
